# tranz

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  release.yml
examples/: score.rs  train_wn18rr.rs
src/: dataset.rs  eval.rs  io.rs  lib.rs  train.rs
tests/: properties.rs
