[package]
name = "tranz"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/tranz"
description = "Point-embedding knowledge graph models: TransE, RotatE, ComplEx. GPU training via candle."
keywords = ["knowledge-graph", "embeddings", "link-prediction"]
categories = ["science", "algorithms"]
readme = "README.md"
publish = true

[dependencies]
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
rand = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[features]
default = ["rand"]
candle = ["dep:candle-core", "dep:candle-nn"]
cuda = ["candle", "candle-core/cuda"]

[dev-dependencies]
proptest = "1.5"
tempfile = "3"

[lints.rust]
missing_docs = "warn"
