[package]
name = "tranz"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/tranz"
description = "Point-embedding knowledge graph models: TransE, RotatE, ComplEx, DistMult. GPU training via candle."
keywords = ["knowledge-graph", "embeddings", "link-prediction"]
categories = ["science", "algorithms"]
readme = "README.md"
publish = true

[dependencies]
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
rand = { version = "0.9", optional = true }
thiserror = "2"

[features]
default = ["rand"]
candle = ["dep:candle-core", "dep:candle-nn", "rand"]
cuda = ["candle", "candle-core/cuda"]

[[bin]]
name = "tranz"
path = "src/bin/tranz.rs"
required-features = ["candle"]

[[example]]
name = "train_wn18rr"
required-features = ["candle"]

[dev-dependencies]
proptest = "1.5"
tempfile = "3"

[lints.rust]
missing_docs = "warn"
